# ai_agents_cookbooks

./: pyproject.toml
june_rag_workshop/: agentic_rag.ipynb
